update api and UI
